--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "DWallet",
-  "displayName": "DWallet"
+  "name": "EthereumRNBoilerplate",
+  "displayName": "EthereumRNBoilerplate"
 }
