--- a/package.json
+++ b/package.json
@@ -10,20 +10,39 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@alessiocancian/react-native-actionsheet": "^3.1.3",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@truffle/contract": "^4.6.6",
     "@walletconnect/react-native-dapp": "^1.7.7",
     "@walletconnect/web3-provider": "^1.8.0",
+    "axios": "^1.1.3",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "node-libs-browser": "^2.2.1",
     "process": "^0.11.10",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-camera": "^4.2.1",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-get-random-values": "^1.7.2",
+    "react-native-permissions": "^3.6.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-svg": "9.6.4",
+    "react-native-vision-camera": "^2.15.2",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "vision-camera-code-scanner": "^0.2.0",
+    "vision-camera-dynamsoft-barcode-reader": "^0.4.4",
     "web3": "^1.8.0"
   },
   "devDependencies": {
